--- a/week4_lab/list.html
+++ b/week4_lab/list.html
@@ -22,23 +22,16 @@
         </header>
 
         <div id="todo-lists">
-            <h2 class="list-title">Groceries</h2>
-            <ol>
-                <li>Eggs</li>
-                <li>Milk</li>
-                <li>Cereal</li>
-            </ol>
             <div class="list">
-                Groceries
+                <h2 class="list-title">Groceries</h2>
+                <ol>
+                    <li>Eggs</li>
+                    <li>Milk</li>
+                    <li>Cereal</li>
+                </ol>
             </div>
-
-            <div class="list">
-                Homework
-            </div>
-
-            <div class="list">
-                Random Errands
-            </div>
+            <input type="text"></input>
+            <button>Add Item</button>
         </div>
     </body>
 
