--- a/week4_lab/index.html
+++ b/week4_lab/index.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <!-- styles -->
         <link rel="stylesheet" type="text/css" href="style.css">
+        <!-- javascript -->
+        <script src="main.js" type="text/javascript"></script>
     </head>
 
     <!-- fonts -->
@@ -33,6 +35,7 @@
             <div class="list">
                 Random Errands
             </div>
+            <button onclick="addNewList()">Add New List</button>
         </div>
     </body>
 
