--- a/week6_lab/index.html
+++ b/week6_lab/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>ToDo App</title>
-        <meta charset="UTF-8">
-        <!-- styles -->
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <!-- javascript -->
-        <script src="main.js" type="text/javascript"></script>
-    </head>
-
+<head>
+    <title>To Do App</title>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- javascript -->
+    <script src="main.js" type="text/javascript"></script>
+</head>
 
-    <body>
+<body>
+    <div id="container">
         <header>
             <h1>My To Do Lists</h1>
             <nav>
                 <a href="index.html">main</a> -
-                <a href="settings.html">settings</a> -
+                <a href="index.html">settings</a>
             </nav>
         </header>
 
@@ -29,15 +28,17 @@
             </div>
 
             <div class="list">
-                Homework
+                <a href="list.html">Homework</a>
             </div>
 
             <div class="list">
-                Random Errands
+                <a href="list.html">Random Errands</a>
             </div>
             <button onclick="addNewList()">Add New List</button>
         </div>
-    </body>
+
+        </div>
+    </div>
+</body>
 
 </html>
-
