--- a/week6_lab/list.html
+++ b/week6_lab/list.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>ToDo App</title>
-        <meta charset="UTF-8">
-        <!-- styles -->
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-
+<head>
+    <title>To Do App</title>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- javascript -->
+    <script src="main.js" type="text/javascript"></script>
+</head>
 
-    <body>
+<body>
+    <div id="container">
         <header>
             <h1>My To Do Lists</h1>
             <nav>
                 <a href="index.html">main</a> -
-                <a href="settings.html">settings</a>
+                <a href="index.html">settings</a>
             </nav>
         </header>
 
         <div id="todo-lists">
             <div class="list">
                 <h2 class="list-title">Groceries</h2>
-                <ol>
-                    <li>Eggs</li>
-                    <li>Milk</li>
-                    <li>Cereal</li>
+                <ol id="grocery-list">
+                    <li><input type="checkbox" class="complete-item">Eggs<button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item">Milk<button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item">Cereal<button class="delete-item">X</button></li>
                 </ol>
+
             </div>
-            <input type="text"></input>
-            <button>Add Item</button>
+            <input id="new-list-item" type="text"></input>
+            <button id="add-item">Add Item</button>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
-
