--- a/week8_lab/animal.html
+++ b/week8_lab/animal.html
@@ -8,11 +8,13 @@
     <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
-    <img id="image" src="">
-    <h1 id="name"></h1>
-    <h1 id="age"></h1>
-    <div>hihidoafojsd</div>
-    <button id="save">Save Animal</button>
-    <p id="message"></p>
+    <div id="container">
+        <img id="image" src="">
+        <h1 id="name"></h1>
+        <h1 id="age"></h1>
+        <button id="save"></button>
+        <p id="message"></p>
+    </div>
+
 </body>
 </html>
