Last changes to hw5

--- a/homework_5/cart.html
+++ b/homework_5/cart.html
@@ -16,8 +16,8 @@
         <h1 class="title">
             <a href="productbrowsing.html">
                 BunBun Bake Shop
-                <img src="Assets/bunbunlogo.jpg" alt="logo"></h1>
-            </a>
+                <img src="Assets/bunbunlogo.jpg" alt="logo">
+            </a></h1>
         <h2> Shopping Cart </h2>
     </header>
     <!-- container for the top bar in the shopping cart -->
@@ -36,7 +36,8 @@
         </div>
         <hr>
         <div id="priceandcheckout">
-            <h2>Total: <h2 id="totalprice">$0</h2>
+            <h2>Total:</h2>
+            <p id="totalprice">$0</p>
             <button class="checkoutbutton">Checkout</button>
         </div>
 
